Lighten up comments

--- a/styles.less
+++ b/styles.less
@@ -24,6 +24,11 @@
 atom-text-editor {
   // color: white;
   // background-color: hsl(180, 24%, 12%);
+
+}
+
+atom-text-editor .syntax--comment, .syntax--punctuation.syntax--definition.syntax--comment {
+    color: #999999;
 }
 
 // To style other content in the text editor's shadow DOM, use the ::shadow expression
